RESOLVED FIXED210458
REGRESSION (r259843): "Missing Plug-In" when dragging an image into Mail Compose
https://bugs.webkit.org/show_bug.cgi?id=210458
Summary REGRESSION (r259843): "Missing Plug-In" when dragging an image into Mail Compose
Tim Horton
Reported 2020-04-13 14:42:34 PDT
REGRESSION (r259843): "Missing Plug-In" when dragging an image into Mail Compose
Attachments
Patch (2.16 KB, patch)
2020-04-13 14:42 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-04-13 14:42:52 PDT
Tim Horton
Comment 2 2020-04-13 14:42:54 PDT
EWS
Comment 3 2020-04-13 15:05:55 PDT
Committed r260043: <https://trac.webkit.org/changeset/260043> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396333 [details].
Note You need to log in before you can comment on or make changes to this bug.